--- a/Client/src/view/SignUpView.fxml
+++ b/Client/src/view/SignUpView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SignUpViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SignUpViewController">
    <children>
       <VBox prefHeight="440.0" prefWidth="700.0" styleClass="root" stylesheets="@huine.css">
          <children>
@@ -109,7 +109,7 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <PasswordField fx:id="confirmPassword" prefWidth="200.0" promptText="Confirm Password" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
+                        <PasswordField fx:id="confirmPassword" onKeyTyped="#verifyPassword" prefWidth="200.0" promptText="Confirm Password" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
                      </children>
                   </HBox>
                   <HBox prefHeight="70.0" prefWidth="350.0">
