--- a/Client/src/view/Main.fxml
+++ b/Client/src/view/Main.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="570.0" prefWidth="460.0" stylesheets="@huine.css">
          <children>
@@ -141,5 +141,6 @@
    <stylesheets>
       <URL value="@huine.css" />
       <URL value="@../CSS/huine.css" />
+      <URL value="@huine.css" />
    </stylesheets>
 </AnchorPane>
