base for main interface

--- a/Client/src/view/AddBookView.fxml
+++ b/Client/src/view/AddBookView.fxml
@@ -39,9 +39,9 @@
                   </ImageView>
                   <VBox prefHeight="248.0" prefWidth="317.0">
                      <children>
-                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="100.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="294.0">
                            <children>
-                              <Label prefHeight="27.0" prefWidth="53.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Name:">
+                              <Label prefHeight="27.0" prefWidth="53.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Title:">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -49,7 +49,7 @@
                                     <Insets left="30.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="title" prefHeight="27.0" prefWidth="196.0" promptText="Book Name" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
+                              <TextField fx:id="title" prefHeight="27.0" prefWidth="200.0" promptText="Book Title" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="100.0">
@@ -62,7 +62,7 @@
                                     <Insets left="30.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="author" prefHeight="27.0" prefWidth="196.0" promptText="Author Name" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
+                              <TextField fx:id="author" prefHeight="27.0" prefWidth="202.0" promptText="Author Name" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="100.0">
@@ -75,12 +75,12 @@
                                     <Insets left="30.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox fx:id="language" prefHeight="25.0" prefWidth="177.0" promptText="Choose Language" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" />
+                              <ComboBox fx:id="language" prefHeight="27.0" prefWidth="181.0" promptText="Click to choose Language" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="100.0">
                            <children>
-                              <Label prefHeight="27.0" prefWidth="74.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Type:">
+                              <Label prefHeight="27.0" prefWidth="74.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Category:">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -88,7 +88,7 @@
                                     <Insets left="30.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox fx:id="type" prefHeight="25.0" prefWidth="175.0" promptText="Choose Type" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" />
+                              <ComboBox fx:id="type" prefHeight="27.0" prefWidth="183.0" promptText="Click to choose Category" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" />
                            </children>
                         </HBox>
                      </children>
@@ -97,7 +97,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="130.0" prefWidth="600.0">
                <children>
-                  <TextArea fx:id="description" prefHeight="130.0" prefWidth="448.0" promptText="Write description here" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2px 2px 2px 2px;" />
+                  <TextArea fx:id="description" prefHeight="128.0" prefWidth="460.0" promptText="Write description here" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2px 2px 2px 2px;" />
                </children>
                <VBox.margin>
                   <Insets top="15.0" />
@@ -105,7 +105,7 @@
             </HBox>
             <HBox alignment="BOTTOM_CENTER" prefHeight="29.0" prefWidth="600.0">
                <children>
-                  <Label text="Error Label" textFill="WHITE" fx:id="error">
+                  <Label fx:id="error" text="Error Label" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
