--- a/Client/src/view/MainView.fxml
+++ b/Client/src/view/MainView.fxml
@@ -35,13 +35,14 @@
                   </HBox>
                </children>
             </HBox>
-            <TableView prefHeight="429.0" prefWidth="446.0" style="-fx-background-color: rgba(125,125,125,0.3); -fx-border-color: rgb(231,231,231); -fx-border-width: 0px 2px 5px 2px;">
+            <TableView fx:id="bookListTable" prefHeight="429.0" prefWidth="446.0"
+                       style="-fx-background-color: rgba(125,125,125,0.3); -fx-border-color: rgb(231,231,231); -fx-border-width: 0px 2px 5px 2px;">
               <columns>
-                <TableColumn prefWidth="35.0" text="No" />
-                <TableColumn maxWidth="123.0" prefWidth="120.0" text="Name" />
-                  <TableColumn prefWidth="110.0" text="Author" />
-                  <TableColumn prefWidth="90.0" text="Language" />
-                  <TableColumn prefWidth="90.0" text="Category" />
+                <TableColumn fx:id="orderColumn" prefWidth="35.0" text="No" />
+                <TableColumn fx:id="titleColumn" maxWidth="123.0" prefWidth="120.0" text="Title" />
+                  <TableColumn fx:id="authorColumn" prefWidth="110.0" text="Author" />
+                  <TableColumn fx:id="languageColumn" prefWidth="90.0" text="Language" />
+                  <TableColumn fx:id="categoryColumn" prefWidth="90.0" text="Category" />
               </columns>
                <VBox.margin>
                   <Insets left="5.0" right="5.0" />
