--- a/Server/src/view/LogView.fxml
+++ b/Server/src/view/LogView.fxml
@@ -6,11 +6,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="351.0" prefWidth="600.0" stylesheets="@Layout.css" userData="Uppercase log" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LogViewController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="351.0" prefWidth="600.0" stylesheets="@Layout.css" userData="Uppercase log" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LogViewController">
     <children>
         <HBox alignment="TOP_CENTER">
             <children>
-                <Label text="Chat Log">
+                <Label text="Book Share Server">
                     <font>
                         <Font name="Comic Sans MS" size="48.0" />
                     </font>
