--- a/Client/src/view/CommentView.fxml
+++ b/Client/src/view/CommentView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -9,10 +10,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="261.0" prefWidth="400.0" stylesheets="@../CSS/huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="276.0" prefWidth="400.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.CommentViewController">
    <children>
-      <VBox prefHeight="261.0" prefWidth="400.0">
+      <VBox prefHeight="276.0" prefWidth="400.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="43.0" prefWidth="400.0" style="-fx-border-color: white; -fx-border-width: 0px 0px 1px 0px;">
                <children>
@@ -23,14 +23,19 @@
                   </Text>
                </children>
             </HBox>
-            <TextArea prefHeight="155.0" prefWidth="400.0" promptText="Write your coment here" style="-fx-background-color: transparent;">
+            <TextArea fx:id="comment" prefHeight="155.0" prefWidth="400.0" promptText="Write your coment here" style="-fx-background-color: transparent;">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </TextArea>
-            <HBox alignment="CENTER" prefHeight="62.0" prefWidth="400.0" style="-fx-border-color: white; -fx-border-width: 1 0 0 0;">
+            <HBox alignment="CENTER" prefHeight="20.0" prefWidth="400.0">
                <children>
-                  <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#searchBooks" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="CANCEL">
+                  <Label fx:id="error" text="Error" textFill="#e81e1e" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="400.0" style="-fx-border-color: white; -fx-border-width: 1 0 0 0;">
+               <children>
+                  <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#cancelMain" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="CANCEL">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -38,7 +43,7 @@
                         <Insets right="30.0" />
                      </HBox.margin>
                   </Button>
-                  <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#searchBooks" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="POST">
+                  <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#postComment" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="POST">
                      <font>
                         <Font size="18.0" />
                      </font>
