--- a/Client/src/view/BookInfoView.fxml
+++ b/Client/src/view/BookInfoView.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="600.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.BookInfoViewController">
    <children>
-      <VBox prefHeight="670.0" prefWidth="600.0">
+      <VBox prefHeight="720.0" prefWidth="600.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="456.0" style="-fx-border-color: white; -fx-border-width: 0 0 1 0;">
                <children>
@@ -217,9 +217,9 @@
                         <Insets left="90.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
+                  <VBox alignment="TOP_CENTER" onMouseClicked="#openMyBooksView" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openMyBooksView" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
                               <Insets top="12.0" />
                            </VBox.margin>
@@ -267,7 +267,7 @@
                               <Image url="@images/iconfinder_user_1608727.png" />
                            </image>
                         </ImageView>
-                        <Label text="User Info" textFill="WHITE">
+                        <Label text="My User Info" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font>
