--- a/Client/src/view/MyBooksView.fxml
+++ b/Client/src/view/MyBooksView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.MyBooksViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.MyBooksViewController">
    <children>
       <VBox prefHeight="519.0" prefWidth="692.0">
          <children>
@@ -27,7 +27,7 @@
                   </Text>
                   <HBox alignment="CENTER_RIGHT" prefHeight="66.0" prefWidth="502.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#openSearchView" style="-fx-background-color: transparent; -fx-border-width: 2px 0px 2px 0px; -fx-border-color: rgb(231,231,231); -fx-text-fill: rgb(231,231,231);" text="Click to Search">
+                        <Button mnemonicParsing="false" onAction="#openSearchView" onMouseClicked="#openSearchView" style="-fx-background-color: transparent; -fx-border-width: 2px 0px 2px 0px; -fx-border-color: rgb(231,231,231); -fx-text-fill: rgb(231,231,231);" text="Click to Search">
                            <HBox.margin>
                               <Insets right="15.0" />
                            </HBox.margin>
@@ -122,9 +122,9 @@
                         <Insets left="33.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
+                  <VBox alignment="TOP_CENTER" onMouseClicked="#openAddBookView" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openAddBookView" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
                               <Insets top="12.0" />
                            </VBox.margin>
@@ -152,7 +152,7 @@
                               <Image url="@images/iconfinder_user_1608727.png" />
                            </image>
                         </ImageView>
-                        <Label text="User Info" textFill="WHITE">
+                        <Label text="My User Info" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font>
