--- a/Client/src/view/BookInfoView.fxml
+++ b/Client/src/view/BookInfoView.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="600.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.BookInfoViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="600.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.BookInfoViewController">
    <children>
       <VBox prefHeight="720.0" prefWidth="600.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="456.0" style="-fx-border-color: white; -fx-border-width: 0 0 1 0;">
                <children>
-                  <Text fx:id="title" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bolder; -fx-fill: rgb(231,231,231); -fx-font-size: 2.4em;" text="Book Title" wrappingWidth="170.13671875">
+                  <Text fx:id="title" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bolder; -fx-fill: rgb(231,231,231); -fx-font-size: 2.4em;" text="Book Title" wrappingWidth="410.13671875">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -77,11 +77,7 @@
                                     <Insets left="15.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="authorName" prefHeight="27.0" prefWidth="200.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Author Name">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
+                              <Text fx:id="authorName" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
@@ -128,7 +124,7 @@
                                     <Insets left="15.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="ownerName" prefHeight="27.0" prefWidth="200.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Name">
+                              <Label fx:id="ownerName" prefHeight="27.0" prefWidth="200.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Name" textOverrun="CLIP" wrapText="true">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -162,7 +158,7 @@
                                     <Insets left="15.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="email" prefHeight="27.0" prefWidth="200.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Email">
+                              <Label fx:id="email" prefHeight="27.0" prefWidth="200.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Email" textOverrun="CLIP">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
