--- a/Client/src/view/SearchView.fxml
+++ b/Client/src/view/SearchView.fxml
@@ -107,7 +107,7 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <TableView fx:id="bookListTable" prefHeight="429.0" prefWidth="445.0" style="-fx-background-color: rgba(125,125,125,0.3); -fx-border-color: rgb(231,231,231); -fx-border-width: 2px 2px 2px 2px;">
+                  <TableView fx:id="bookListTable" onMouseClicked="#openBookInfoView" prefHeight="429.0" prefWidth="445.0" style="-fx-background-color: rgba(125,125,125,0.3); -fx-border-color: rgb(231,231,231); -fx-border-width: 2px 2px 2px 2px;">
                     <columns>
                       <TableColumn fx:id="orderColumn" prefWidth="21.0" text="No" />
                       <TableColumn fx:id="titleColumn" maxWidth="134.0" prefWidth="100.0" text="Title" />
@@ -145,7 +145,7 @@
                   </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openMyBooksView" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/iconfinder_office-04_809571.png" />
                            </image>
