--- a/Client/src/view/UserInfoView.fxml
+++ b/Client/src/view/UserInfoView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,131 +11,122 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="600.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.BookInfoViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="650.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.UserInfoViewController">
    <children>
-      <VBox prefHeight="720.0" prefWidth="600.0">
+      <VBox prefHeight="490.0" prefWidth="650.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="456.0" style="-fx-border-color: white; -fx-border-width: 0 0 1 0;">
                <children>
-                  <Text fx:id="title" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bolder; -fx-fill: rgb(231,231,231); -fx-font-size: 2.4em;" text="Book Title" wrappingWidth="410.13671875">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bolder; -fx-fill: rgb(231,231,231); -fx-font-size: 2.4em;" text="My Info" wrappingWidth="170.13671875">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Text>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="95.0" prefWidth="510.0">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#openSearchView" onMouseClicked="#openSearchView" style="-fx-background-color: transparent; -fx-border-width: 2px 0px 2px 0px; -fx-border-color: rgb(231,231,231); -fx-text-fill: rgb(231,231,231);" text="Click to Search">
-                           <HBox.margin>
-                              <Insets right="10.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="62.0" prefWidth="463.0" />
                </children>
             </HBox>
-            <HBox prefHeight="368.0" prefWidth="600.0">
+            <HBox prefHeight="298.0" prefWidth="650.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="368.0" prefWidth="238.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="368.0" prefWidth="325.0">
                      <children>
                         <ImageView fitHeight="154.0" fitWidth="134.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@images/closed_book.png" />
+                              <Image url="@images/iconfinder_user_1608727.png" />
                            </image>
                         </ImageView>
                         <VBox prefHeight="235.0" prefWidth="256.0">
-                           <children>
-                              <Label prefHeight="27.0" prefWidth="99.0" style="-fx-text-fill: rgb(231,231,231);" text="Description:">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <HBox prefHeight="181.0" prefWidth="238.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 2;">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                                 <children>
-                                    <Text fx:id="description" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="219.13671875" />
-                                 </children>
-                              </HBox>
-                           </children>
                            <VBox.margin>
                               <Insets top="2.0" />
                            </VBox.margin>
+                           <children>
+                              <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
+                                 <children>
+                                    <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Username:">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="username" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Username">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="15.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
+                                 <children>
+                                    <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Password:">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="password" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Password">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="15.0" />
+                                 </VBox.margin>
+                              </HBox>
+                           </children>
                         </VBox>
                      </children>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="368.0" prefWidth="362.0">
+                  <VBox prefHeight="294.0" prefWidth="325.0">
                      <children>
-                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="325.0">
                            <children>
-                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Author:">
+                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Full Name:">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="15.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="authorName" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Author">
+                              <Label fx:id="fullName" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Full Name">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets top="1.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
                            <children>
-                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Language:">
+                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="City:">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="15.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="language" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Book Langauge">
+                              <Label fx:id="city" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="City">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
-                           <children>
-                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Category:">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets left="15.0" />
-                                 </HBox.margin>
-                              </Label>
-                              <Label fx:id="category" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Book Category">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
-                           <children>
-                              <Label prefHeight="27.0" prefWidth="80.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner:">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets left="15.0" />
-                                 </HBox.margin>
-                              </Label>
-                              <Label fx:id="ownerName" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Name" textOverrun="CLIP" wrapText="true">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                           </children>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
                            <children>
@@ -145,15 +135,18 @@
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="15.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="phoneNumber" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Phone">
+                              <Label fx:id="phone" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Phone">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="345.0">
                            <children>
@@ -162,36 +155,29 @@
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="15.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="email" prefHeight="27.0" prefWidth="250.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Owner Email" textOverrun="CLIP">
+                              <Label fx:id="email" prefHeight="27.0" prefWidth="225.0" style="-fx-border-color: rgb(231,231,231); -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: rgb(231,231,231);" text="Email">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
                         </HBox>
                      </children>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
-            <VBox prefHeight="160.0" prefWidth="600.0">
+            <VBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="600.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="99.0" style="-fx-text-fill: rgb(231,231,231);" text="Comments:">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets left="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <ListView prefHeight="97.0" prefWidth="575.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 2 2 2 2;">
-                     <VBox.margin>
-                        <Insets bottom="5.0" left="10.0" right="15.0" />
-                     </VBox.margin>
-                  </ListView>
-                  <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#openCommentView" onMouseClicked="#openCommentView" prefHeight="20.0" prefWidth="107.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Write Comment">
+                  <Button maxHeight="40.0" maxWidth="128.0" mnemonicParsing="false"  prefHeight="32.0" prefWidth="128.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Edit Profile">
                      <VBox.margin>
                         <Insets bottom="5.0" left="10.0" />
                      </VBox.margin>
@@ -217,7 +203,7 @@
                         </Label>
                      </children>
                      <HBox.margin>
-                        <Insets left="90.0" />
+                        <Insets left="115.0" />
                      </HBox.margin>
                   </VBox>
                   <VBox alignment="TOP_CENTER" onMouseClicked="#openMyBooksView" prefHeight="80.0" prefWidth="80.0">
@@ -260,9 +246,9 @@
                         <Insets left="33.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
+                  <VBox alignment="TOP_CENTER" onMouseClicked="#openUserInfoView" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openUserInfoView" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
                               <Insets top="12.0" />
                            </VBox.margin>
@@ -270,7 +256,7 @@
                               <Image url="@images/iconfinder_user_1608727.png" />
                            </image>
                         </ImageView>
-                        <Label text="My User Info" textFill="WHITE">
+                        <Label text="User Info" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font>
