--- a/Client/src/view/EditProfileView.fxml
+++ b/Client/src/view/EditProfileView.fxml
@@ -95,7 +95,7 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="password" onKeyTyped="#checkLogin" prefHeight="20.0" prefWidth="200.0" promptText="Current Password" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
+                        <TextField fx:id="password" editable="false" onKeyTyped="#checkLogin" prefHeight="20.0" prefWidth="200.0" promptText="Current Password" style="-fx-border-width: 0px 0px 2px 0px; -fx-background-color: transparent; -fx-border-color: rgb(231,231,231);" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="70.0" prefWidth="350.0">
