--- a/Client/src/view/BookInfoView.fxml
+++ b/Client/src/view/BookInfoView.fxml
@@ -58,7 +58,7 @@
                                     <Insets left="10.0" />
                                  </VBox.margin>
                                  <children>
-                                    <Text fx:id="description" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: newPassword.get();" wrappingWidth="219.13671875" />
+                                    <Text fx:id="description" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: white;" wrappingWidth="219.13671875" />
                                  </children>
                               </HBox>
                            </children>
@@ -260,9 +260,9 @@
                         <Insets left="33.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
+                  <VBox alignment="TOP_CENTER" onMouseClicked="#openUserInfoView" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openUserInfoView" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
                               <Insets top="12.0" />
                            </VBox.margin>
