--- a/Client/src/view/SearchView.fxml
+++ b/Client/src/view/SearchView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="700.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.SearchViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="700.0" stylesheets="@huine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.SearchViewController">
    <children>
       <VBox prefHeight="570.0" prefWidth="700.0" stylesheets="@huine.css">
          <children>
@@ -183,9 +183,9 @@
                         <Insets left="33.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="80.0">
+                  <VBox alignment="TOP_CENTER" onMouseClicked="#openUserInfoView" prefHeight="80.0" prefWidth="80.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#openUserInfoViewv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/iconfinder_user_1608727.png" />
                            </image>
